# rust-sdk

./: .gitignore  Cargo.toml  Makefile  README.md  rustfmt.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: RustCI.yaml
scripts/: generate-openapi.sh
src/: builder.rs  client.rs  error.rs  lib.rs
src/auth/: api_key.rs  basic.rs  mod.rs  session_token.rs
src/containers/: indexes.rs  mod.rs
src/models/: chart.rs  main.rs  mod.rs  response.rs
